# resolve

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Cargo.toml
backend/src/: config.rs  db.rs  lib.rs  main.rs  state.rs
backend/src/admin/: handlers.rs  mod.rs  models.rs  repository.rs  service.rs
backend/src/ai/: mod.rs
backend/src/auth/: README.md  claims.rs  handlers.rs  jwt.rs  mod.rs  models.rs  password.rs  refresh_token.rs  repository.rs  service.rs  token.md
backend/src/errors/: api_error.rs  mod.rs
backend/src/group/: README.md  handlers.rs  models.rs  repository.rs  service.rs
backend/src/rbac/: service.rs
backend/src/server/: middleware.rs  routes.rs
backend/src/ticket/: handlers.rs  models.rs  repository.rs  service.rs
backend/src/user/: models.rs  repository.rs  service.rs
backend/src/utils/: mod.rs
backend/tests/: admin_api_tests.rs  admin_repository_tests.rs  admin_service_tests.rs  api_tests.rs  auth_tests.rs  backend-testing.md  group_api_tests.rs  group_repository_tests.rs  group_service_tests.rs  rbac_api_tests.rs  rbac_service_tests.rs  ticket_api_tests.rs
backend/tests/support/: mod.rs
design/: admin-page-plan.md  tickets-design.md
docs/: ai-integration.md  api.md  architecture.md  backend.md  database.md  frontend.md  rbac.md
docs/implementation/: README.md  backend-flow.md  data-model.md  deviations.md  frontend-flow.md
docs/specification/: backend.md  database.md  rbac.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.css  main.jsx
frontend/src/lib/: axios.js  (+3 more)
(+72 files in other folders)
