[package]
name = "ort-final-project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
mongodb = "3"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
bcrypt = "0.15"
chrono = "0.4"
futures = "0.3"
jsonwebtoken = "9"
